--- a/docker/nginx/conf.d/school.nginx.conf
+++ b/docker/nginx/conf.d/school.nginx.conf
@@ -1,16 +1,16 @@
 server {
-    listen 3333;
+    listen 5000;
 
-    server_name tt-school.local;
+    server_name thesocialhub.whatever;
 
-    access_log /var/log/nginx/school.log;
-    error_log /var/log/nginx/error_school.log error;
+    access_log /var/log/nginx/thesocialhub.log;
+    error_log /var/log/nginx/thesocialhub_error.log;
 
     location / {
-        proxy_pass http://school_service:8013;
-        fastcgi_read_timeout 999999;
-        proxy_read_timeout 999999;
-        proxy_connect_timeout 999999;
-        proxy_send_timeout 999999;
+        proxy_pass http://thesocialhub:8000;
+        # fastcgi_read_timeout 999999;
+        # proxy_read_timeout 999999;
+        # proxy_connect_timeout 999999;
+        # proxy_send_timeout 999999;
     }
 }
