--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ db_password=root
 db_database=thesocialhub
 db_database_test=test_db
 ERROR_LOG_PATH=/tmp/err.log
-
+EMAIL_HOST=ipos10d@gmail.com
+EMAIL_HOST_PASSWORD=ipos10diem
 
 ELASTICSEARCH_HOST=elasticsearch
 ELASTICSEARCH_PORT=9200
