--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ db_database_test=test_db
 ERROR_LOG_PATH=/tmp/err.log
 EMAIL_HOST=ipos10d@gmail.com
 EMAIL_HOST_PASSWORD=ipos10diem
+secret=iqwpekcJsbadHJS213
+algorithm=HS256
 
 ELASTICSEARCH_HOST=elasticsearch
 ELASTICSEARCH_PORT=9200
