--- a/.env
+++ b/.env
@@ -6,20 +6,19 @@ db_database=thesocialhub
 db_database_test=test_db
 ERROR_LOG_PATH=/tmp/err.log
 EMAIL_HOST=ipos10d@gmail.com
-EMAIL_HOST_PASSWORD=ipos10diem
+EMAIL_HOST_PASSWORD=ycacxpayjqqpetqs
 secret=iqwpekcJsbadHJS213
 algorithm=HS256
+SIGNUP_CONFIRM_DURATION=60
+FE_VERIFY_URL=http://localhost/verify?t
 
 ELASTICSEARCH_HOST=elasticsearch
-ELASTICSEARCH_PORT=9200
-
-SCHOOL_DATA_PROVIDER=database
-
 RABBITMQ_HOST=rabbitmq
-RABBITMQ_PORT=5672
 RABBITMQ_USER=guest
 RABBITMQ_PASS=guest
 RABBITMQ_VHOST=/
+
+SCHOOL_DATA_PROVIDER=database
 
 NGINX_VERSION=1.19.0
 PYTHON_VERSION=3.10.4
@@ -29,6 +28,9 @@ KIBANA_VERSION=7.13.0
 MYSQL_VERSION=8.0
 REDIS_VERSION=6.2.10
 WORKSPACE_TIMEZONE=UTC
+
+RABBITMQ_PORT=5672
+ELASTICSEARCH_PORT=9200
 API_PORT=8000
 DB_PORT=3306
 REDIS_PORT=6379
