--- a/.env
+++ b/.env
@@ -5,12 +5,15 @@ db_password=root
 db_database=thesocialhub
 db_database_test=test_db
 ERROR_LOG_PATH=/tmp/err.log
+
 EMAIL_HOST=ipos10d@gmail.com
 EMAIL_HOST_PASSWORD=ycacxpayjqqpetqs
 secret=iqwpekcJsbadHJS213
 algorithm=HS256
 SIGNUP_CONFIRM_DURATION=60
 FE_VERIFY_URL=http://localhost/verify?t
+USER_ACCESS_TOKEN_SHORT_LIVE=7200
+USER_ACCESS_TOKEN_LONG_LIVE=150
 
 ELASTICSEARCH_HOST=elasticsearch
 RABBITMQ_HOST=rabbitmq
