--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ EMAIL_HOST=ipos10d@gmail.com
 EMAIL_HOST_PASSWORD=ycacxpayjqqpetqs
 secret=iqwpekcJsbadHJS213
 algorithm=HS256
-SIGNUP_CONFIRM_DURATION=60
-FE_VERIFY_URL=http://localhost/verify?t
+SIGNUP_CONFIRM_DURATION=120
+FE_VERIFY_URL=http://localhost:8080/verify?token
 USER_ACCESS_TOKEN_SHORT_LIVE=7200
 USER_ACCESS_TOKEN_LONG_LIVE=150
 
