--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ EMAIL_HOST_PASSWORD=ycacxpayjqqpetqs
 secret=iqwpekcJsbadHJS213
 algorithm=HS256
 SIGNUP_CONFIRM_DURATION=120
-FE_VERIFY_URL=http://localhost:8080/verify?token
+FE_VERIFY_URL=http://ec2-18-181-190-3.ap-northeast-1.compute.amazonaws.com/verify?token
 USER_ACCESS_TOKEN_SHORT_LIVE=7200
 USER_ACCESS_TOKEN_LONG_LIVE=150
 
